--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "spin-wheel": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
