--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "spin-wheel": "^5.0.2"
+    "react-custom-roulette": "^1.4.1",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
